# Bluefors-DC

./: .gitignore  AMI430_Magnet controller Interface_PK.vi  DRIVER_MIGRATION.md  I(V) at various fields_K6221-K2182A_PK.vi  I(V) at various fields_MFLI_PK_v4.0_measure X.vi  I(V)_K2636B_PK.vi  I(V)_K6221-K2182a_PK.vi  MIGRATION_GUIDE.py  README.md  RH vector map_two devices_BF_LD-400_MFLI_MF-MD_PK_V5.0.vi  RH_BF_LD-400_MFLI_PK_v4.0_measure_voltageR_fourMFLI.vi  RT_BF_LD-400_MFLI_PK_v4.0_measure_voltageR_fourMFLI.vi  STS at various H_MFLI_MF-MD_K3636B_PK_V4.0_withaveraging.vi  Set2D_Magneticfield(polar)_PK.vi  T_MXC_control_PK_v1.0.vi  dV-dI two devices at various H_MFLI_MF-MD_K3636B_PK_V4.0_withaveraging.vi  pyproject.toml  realtime_IV_K2182A_K6221_vs_time_PK.vi  realtime_I_K6221_vs_time_PK.vi
I-V programs/: Frequency_current_field map_MFLI_PK_v4.0_measureXandY.vi  Frequency_sweep_measureXandY_w_2w_3w_MFLI_PK_v4.0.vi  I(V) at various fields_K6221-K2182A_PK.vi  I(V) at various fields_MFLI_PK_v4.0_measure X.vi  I(V)_K2636B_PK.vi  I(V)_K6221-K2182a_PK.vi  I(V)_K6221-K2182a_PK_fixedrange.vi  I(V)_MFLI_PK_v4.0_measure X.vi  I(V)_MFLI_PK_v4.0_measure X_JA.vi  I(V)_MFLI_PK_v4.0_measure X_copy.vi  I(V)_MFLI_PK_v4.0_measureR.vi  I(V)_MFLI_PK_v4.0_measureR_phase.vi  IV(H)_2devices_DC_temperature sweep_BF_LD-400_K6221_K2182A_PK.vi  IV(H)_2devices_DC_vector_magnet_angle+temperature_sweep_BF_LD-400_K6221_K2182A_PK.vi  IV(H)_2devices_DC_vector_magnet_anglesweep_BF_LD-400_K6221_K2182A_PK.vi  IV(H)_2devices_DC_vector_magnet_stable+sweep_BF_LD-400_K6221_K2182A_PK.vi  V(I)_K2636B_PK.vi  (+7 more)
(+33 files in other folders)
