[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bluefors-dc"
version = "1.0.0"
description = "Python/QCoDeS implementation of Bluefors DC measurements (migrated from LabVIEW)"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "qcodes>=0.41.0",
    "qcodes-contrib-drivers>=0.20.0",
    "numpy>=1.21.0",
    "matplotlib>=3.5.0",
    "pyqtgraph>=0.12.0",
    "scipy>=1.7.0",
    "h5py>=3.6.0",
    "pyvisa>=1.12.0",
    "pandas>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
    "mypy>=0.991",
]
zhinst = [
    "zhinst-qcodes>=0.3.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["bluefors_dc*"]
exclude = ["tests*"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]